--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ dist/
 downloads/
 eggs/
 .eggs/
+env/
+data/
 lib/
 lib64/
 parts/
@@ -31,6 +33,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*DS_Store
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -114,4 +117,3 @@ test/*
 .pyre/
 
 # End of https://www.gitignore.io/api/python
-
